# multi-vector-retrieval

./: .gitignore  CMakeLists.txt  README.md  build-project.txt  dataset.md  dataset_info.txt
baseline/ColBERT/: .gitignore  conda_env.yml  modify.txt  process_dessert_index.py  process_index.py  run.py  self_index.py  test.py
baseline/ColBERT/ColBERT.egg-info/: PKG-INFO
baseline/ColBERT/colbert/: index_generate.py  searcher_for_encode.py
baseline/Dessert/: .gitignore  README.txt  run.py  run_end_to_end.py  test.py
baseline/Dessert/src/: MaxFlash.cc  MaxFlash.h  MaxFlashArray.cc  MaxFlashArray.h
baseline/emvb/: build_performance.py  command.txt  run.py
cmake/: FindOpenBLAS.cmake
csc200/CSC200-README/: README  README-build_index  README-eval_muvera  README-eval_performance  README-item-vec-length-graph  README-partition_schemes
csc200/Result-Graphs/: graph_results.py
csc200/multi-vector-retrieval/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  dataset.md  dataset_info.txt
csc200/multi-vector-retrieval/baseline/ColBERT/: modify.txt  process_dessert_index.py  process_index.py  run.py  self_index.py  test.py
csc200/multi-vector-retrieval/baseline/ColBERT/ColBERT.egg-info/: SOURCES.txt
csc200/multi-vector-retrieval/baseline/ColBERT/colbert/: __init__.py  index_generate.py  indexer.py  searcher.py  searcher_for_encode.py
csc200/multi-vector-retrieval/baseline/ColBERT/colbert/data/: ranking.py
csc200/multi-vector-retrieval/baseline/ColBERT/colbert/evaluation/: loaders.py
csc200/multi-vector-retrieval/baseline/ColBERT/colbert/indexing/: collection_indexer_generate.py  index_saver_generate.py
csc200/multi-vector-retrieval/baseline/ColBERT/colbert/indexing/codecs/: residual_generate.py
csc200/multi-vector-retrieval/baseline/ColBERT/colbert/modeling/: colbert.py
csc200/multi-vector-retrieval/baseline/ColBERT/colbert/modeling/tokenization/: query_tokenization.py
csc200/multi-vector-retrieval/baseline/ColBERT/colbert/search/: filter_pids.cpp
csc200/multi-vector-retrieval/baseline/Dessert/: CMakeLists.txt  README.txt  build.sh  run.py  test.py
csc200/multi-vector-retrieval/baseline/Dessert/experiments/: graph_synthetic.py  msmarco.py  msmarco_colbert.py  run_dessert.py  run_dessert_integrate.py
csc200/multi-vector-retrieval/baseline/Dessert/python_bindings/: DessertPython.cc
csc200/multi-vector-retrieval/baseline/Dessert/src/: DocSearch.h
csc200/multi-vector-retrieval/baseline/emvb/: CMakeLists.txt
csc200/multi-vector-retrieval/baseline/emvb/include/: DocumentScorer.hpp
csc200/multi-vector-retrieval/baseline/emvb/script/: build_index_new.py  build_index_old.py  data_structure.py  performance_metric.py  results_lotte.sh  util.py
csc200/multi-vector-retrieval/baseline/emvb/src/: perf_emvb.cpp
csc200/multi-vector-retrieval/cmake/: FindOpenBLAS.cmake
csc200/multi-vector-retrieval/multi-vector-retrieval-data/Embedding/lotte-500-gnd/: lotte-500-gnd-groundtruth-top10--.tsv  query_embedding.npy
csc200/multi-vector-retrieval/multi-vector-retrieval-data/Embedding/lotte-500-gnd/base_embedding/: doclens0.npy
csc200/multi-vector-retrieval/multi-vector-retrieval-data/Index/lotte-500-gnd/emvb/: centroids.npy  doclens.npy  qID_l.txt  query_embeddings.npy
csc200/multi-vector-retrieval/multi-vector-retrieval-data/Index/lotte-500-gnd/plaid/: 0.codes.pt  centroids.pt  doclens.0.json  ivf.pid.pt  plan.json
csc200/multi-vector-retrieval/script/data/: build_index.py  build_index_by_sample.py  groundtruth.py  util.py
csc200/multi-vector-retrieval/script/evaluation/: distribution_test.py  equidepth.py  equidepth_s.py  equidepth_sorted.py  equidepth_sorted_s.py  equiwidth.py  equiwidth_s.py  equiwidth_sorted.py  equiwidth_sorted_s.py  eval_igp.py  eval_muvera.py  eval_plaid.py  evaluation_pipeline.py  item_vec_length_graph.py  lotte-500-gnd-p4_lengths.txt  parallel.py  performance_metric.py  run_dessert.py
csc200/multi-vector-retrieval/script/evaluation/technique/: vq.py  vq_sq.py
csc200/multi-vector-retrieval/src/app/: BruteForce.cpp  IGP.cpp  MUVERA.cpp
csc200/multi-vector-retrieval/src/impl/: BruteForce.hpp  BruteForceProgressive.hpp  IGP.hpp  MUVERA.hpp
csc200/multi-vector-retrieval/src/include/alg/: Distance.hpp  MatrixMulBLAS.hpp  MatrixMulCUBLAS.hpp
csc200/multi-vector-retrieval/src/include/alg/probe/: ProbeEleMinHeap.hpp  ProbeHeap.hpp
csc200/multi-vector-retrieval/src/include/alg/probe/IGP/: IGPAlg.hpp  IGPMatrixMultProbe.hpp  IGPProbeController.hpp  IGPProximityGraphProbe.hpp  IGPStruct.hpp
csc200/multi-vector-retrieval/src/include/alg/probe/IGP/hnsw_probe/: L2space.hpp  hnswalg.hpp  hnswlib.hpp
csc200/multi-vector-retrieval/src/include/alg/query_coreset/: QueryCoreset.hpp
csc200/multi-vector-retrieval/src/include/alg/refine/: ResidualScalarQuantization.hpp
csc200/multi-vector-retrieval/src/include/compute_score/: CPUComputeScore.hpp  GPUComputeScore.hpp
csc200/multi-vector-retrieval/src/include/muvera/: TransformIP.hpp
csc200/multi-vector-retrieval/src/include/muvera/src/utils/: parse_results.h  point_range.h  pq_ip_point.hpp  pq_point_range.hpp  stats.h
csc200/multi-vector-retrieval/src/include/muvera/src/vamana/: build_vamana.h  neighbors.h
csc200/multi-vector-retrieval/src/include/struct/: BoolArray.hpp  MethodBase.hpp  MinHeap.hpp  PositionHeap.hpp  TypeDef.hpp  VectorBasedSearch.hpp
csc200/multi-vector-retrieval/src/include/util/: CUDAUtil.hpp  TimeMemory.hpp  util.hpp
csc200/parlaylib/: CMakeCache.txt  Makefile  ParlayConfig.cmake  cmake_install.cmake
lotte-500-gnd-results/: eval_performance.py  lotte-500-gnd-groundtruth-top1--.tsv  lotte-500-gnd_lengths.txt
lotte-500-gnd-results/Result/: stats_for_top1.txt  stats_for_top10.txt  stats_for_top5.txt
script/data/: build_index.py  groundtruth.py  util.py
script/evaluation/: eval_dessert.py  eval_emvb.py  eval_igp.py  eval_muvera.py  eval_plaid.py  evaluation_pipeline.py  run_dessert.py
src/app/: BruteForce.cpp  BruteForceProgressive.cpp  IGP.cpp  MUVERA.cpp
src/impl/: BruteForce.hpp  IGP.hpp  MUVERA.hpp
(+824 files in other folders)
